# homebrew-manager

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.kiro/specs/homebrew-ui-manager/: design.md  requirements.md  tasks.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: homebrew.rs  lib.rs  main.rs
src/components/: ConfirmDialog.css  ConfirmDialog.tsx  ContextMenu.css  ContextMenu.tsx  ErrorPage.css  ErrorPage.tsx  FilterTabs.css  FilterTabs.tsx  HistoryPanel.css  HistoryPanel.tsx  PackageDetails.css  PackageDetails.tsx  PackageList.css  PackageList.tsx  ProgressModal.css  ProgressModal.tsx  SearchBar.css  SearchBar.tsx  Toast.css  Toast.tsx
src/hooks/: usePackages.ts  usePreferences.ts
src/i18n/: index.ts
src/styles/: index.css
src/types/: index.ts  preferences.ts
src/utils/: filter.ts  sort.ts
